# dataordate

./: LICENSE.md  README.md
dataordate/: pyproject.toml
dataordate/dataordate/: config.py  main.py  utils.py
dataordate/dataordate/birthday_module/: bithday_api.py  tests.ipynb
dataordate/tests/: test_dataordate.py
