[tool.poetry]
name = "dataordate"
version = "0.1.0"
description = ""
authors = ["Vladik <pol333.1@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
